fixed NullPointerExceptions occurring when missing email is provided in UserEditRequest dto